[package]
name = "eta-algorithms"
version = "1.5.4"
edition = "2021"
authors = ["erik9631@gmail.com"]
description = "Low overhead data structures focused on performance"
license-file = "license.txt"
readme = "README.MD"
repository = "https://github.com/erik9631/eta-algorithms"

[profile.test]
debug = true
inherits = "release"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "array"
harness = false

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "queue"
harness = false